--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,9 +17,8 @@ marketing:
   seo:
     site_type: Person
     local_business_type: ''
-    org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    org_name: 'Mohammed Benabbassi'
+    description: "Mohammed Benabbassi's portfolio."
   analytics:
     google_analytics: ''
     baidu_tongji: ''
